# ZmqQueue

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
queue/: common.h  encoder.h  gatherQueue.h  queue.h
src/: common.h  event.h  uuidGen.h  zmqPuller.h  zmqPusher.h
tools/: Untitled Diagram.drawio  class_desc.drawio  toolchain_paths.py
